# vectordb-handson

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: confluence.json
vectordb_blog/: config.py  ingestion.py  query.py  rag.py  utils.py
vectordb_blog/setup/: create_dataset.py
